Improve README.md and Dockerfile